dado + provável na escolha do tipo da coluna, import e export compartilhando frame, union quase funcionando, cartesianProduct não abre mais uma tela, alterações internas das entidades Cell, OperatorCell e TableCell